--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="home" class="flex-center flex-column">
             <h1>Quick Quiz</h1>
 
-            <a class="btm" href="/games.html">Play</a>
-            <a class="btm" href="/highscores.html">High Scores</a>
+            <a class="btn" href="/game/games.html">Play</a>
+            <a class="btn" href="/score/highscores.html">High Scores</a>
         </div>
     </div>
 </body>
