--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-            <h1>Quick Quiz</h1>
+            <h1>Quizzard</h1>
 
-            <a class="btn" href="/game/games.html">Play</a>
-            <a class="btn" href="/score/highscores.html">High Scores</a>
+            <a class="btn" href="game/game.html">Play</a>
+            <a class="btn" href="score/highscores.html">High Scores</a>
         </div>
     </div>
 </body>
