--- a/game/game.html
+++ b/game/game.html
@@ -15,16 +15,18 @@
         <div id="game" class="justify-center flex-column">
           <div id="hud">
               <div id="hud-item">
-                  <p class="hud-prefix">
+                  <p class="hud-prefix" id="progressText">
                     Question
                   </p>
-                  <h1 class="hud-main-text" id="questionCounter"></h1>
+                  <div id="progressBar">
+                      <div class="progressBarFull"></div>
+                  </div>
               </div>
               <div id="hud-item">
                   <p class="hud-prefix">
                     Score
                   </p>
-                  <h1 class="hud-main-text" id="score"></h1>
+                  <h1 class="hud-main-text" id="score">0</h1>
               </div>
           </div>
             <h2 id="question">What is the answer to this question</h2>
