--- a/game/end.html
+++ b/game/end.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width" initial-scale="1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
-    <title>Quiz Game</title>
+    <title>Congrats!</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="game.css">
 </head>
@@ -13,13 +13,21 @@
 <body>
     <div class="container">
         <div id="game" class="flex-center flex-column">
-            <h2 id="question">You have completed all the questions!</h2>
-
+            <h2 id="finalScore">0</h2>
+            <form>
+                <input 
+                  type="text"
+                  name="username"
+                  id="username"
+                  placeholder="username"
+                  />
+                  <button type="submit" class="btn" id="saveScoreBtn" onClick='saveHighScore(event)' disabled>Save</button>
+                  <a class="btn" href="../game.html">Play Again</a>
+                  <a class="btn" href="/">Go Home</a>
+            </form>
         </div>
     </div>
+    
+<script src="end.js"></script>
 </body>
-
-
-
-
 </html>
